refactor(resource): refactor resource-server
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>